# scarab

./: .buildinfo  .gitignore  README.md  contents.html  dmoptimize.html  genindex.html  index.html  justfile  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  sitemap.xml  transforms.html
.doctrees/: contents.doctree  dmoptimize.doctree  environment.pickle  index.doctree  quickstart.doctree  transforms.doctree
.github/workflows/: docs.yml
docs/source/: conf.py  contents.md  quickstart.ipynb  transforms.ipynb
src/scarab/: base.py  rfi.py  transform.py  utilities.py  utils.py
src/scarab/dists/: __init__.py  base.py  models.py
src/scarab/dm/: __init__.py  base.py  fdmt.py  optim.py  optimize.py
src/scarab/fit/: __init__.py  base.py  models.py
src/scarab/peaks/: __init__.py  base.py  billauer.py  topology.py
src/scarab/rfi/: __init__.py  iqrm.py  zerodm.py
src/scarab/snr/: __init__.py  base.py  cpad.py  noise.py  templates.py
